--- a/backend/.env
+++ b/backend/.env
@@ -1,20 +1,18 @@
-PORT=8080
+PORT=8000
 
 # MongoDB connection URI
-MONGODB_URI=mongodb+srv://rahulbera:rahul753@mern.jfo6cmq.mongodb.net/MERN?retryWrites=true&w=majority&appName=Mern
-
-# JWT secret for token signing
+MONGODB_URI=mongodb+srv://SurajDB:Suraj12345@cluster0.wtes1yf.mongodb.net/
 JWT_SECRET=yourSuperSecretKey
 
 # Razorpay keys
-RAZORPAY_KEY_ID=rzp_test_OGeZk6IbP83wym
-RAZORPAY_KEY_SECRET=z7a8G7ScZhEFi1g5Yfnwdukk
+RAZORPAY_KEY_ID=rzp_test_SHeBxgLdKn4PRS
+RAZORPAY_KEY_SECRET=ejTYu15hwzFW1nTfwnAzL0Ub
 
 # -------------------------------
 # Forgot Password Config
 FRONTEND_URL=http://localhost:5173
-EMAIL_USER=rahulbera2226@gmail.com
-EMAIL_PASS=zmrm hmtk dpbk lvug
+EMAIL_USER=surajyaduvanshi27022001@gmail.com
+EMAIL_PASS=vcbn cqqn hxfr wckb
 
 
 
